--- a/configs/cifar10_hrnet18_1gpu.yaml
+++ b/configs/cifar10_hrnet18_1gpu.yaml
@@ -5,13 +5,13 @@ PRINT_ITER_PERIOD: 5
 TEST_EPOCH_PERIOD: 10
 
 MODEL:
-  NETWORK: ["hrnet",]
+  NETWORK: ["hrnet18",[]]
   NETWORK_STRIDE: []
 
 SOLVER:
   MAX_EPOCH: 100
   BATCH_SIZE: 256
-  BASE_LR: 0.1
+  BASE_LR: 0.01
   STEPS: [30, 60, 90]
 
 TRAIN:
